hard-gists/f8ab99789fd347a13591bc7eeff97149/run.log
=== Docker Run Log for f8ab99789fd347a13591bc7eeff97149 ===
Started at: Mi 29. Okt 21:29:49 CET 2025

[2025-10-29 21:29:50] START: Running container for f8ab99789fd347a13591bc7eeff97149
[2025-10-29 21:29:50] SUCCESS: Container cf35d08d10b6b10c355ffc088180c29813f2b4c48d6229632a95441a7d35b495 started for f8ab99789fd347a13591bc7eeff97149
=== Container logs for f8ab99789fd347a13591bc7eeff97149 ===
  File "/snippet.py", line 37
    print "test"
    ^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for f8ab99789fd347a13591bc7eeff97149 ===
[2025-10-29 21:29:52] INFO: Container cf35d08d10b6b10c355ffc088180c29813f2b4c48d6229632a95441a7d35b495 has stopped
